update Java version